Polish Services code and creates button to create post.